--- a/FinalDemo.ipynb
+++ b/FinalDemo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Intro\n",
     "\n",
-    "This is a demo of the paper Teachable Reinforcement Learning via Advice Distillation showing how humans can use advice to coach agents through new tasks.\n",
+    "This is a demo of the paper Teachable Reinforcement Learning via Advice Distillation showing how humans can use advice to coach agents through new tasks!\n",
     "\n",
     "For more details, check out our NeurIPS paper and video: https://neurips.cc/Conferences/2021/Schedule?showEvent=27834"
    ]
@@ -19,6 +19,15 @@
    "source": [
     "import sys\n",
     "sys.path = [p for p in sys.path if not 'babyai' in p]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo $DISPLAY"
    ]
   },
   {
@@ -127,7 +136,8 @@
    "outputs": [],
    "source": [
     "from final_demo import *\n",
-    "from IPython.display import HTMLimport pathlib\n",
+    "from IPython.display import HTML\n",
+    "import pathlib\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl"
@@ -141,7 +151,7 @@
     "\n",
     "## Instructions\n",
     "1. Select the collection mode.\n",
-    "    - \"Advice\" runs the \"Improvement\" phase of our method, allowing you to coach an agent through\n",
+    "    - \"Advice\" runs the \"Improvement\" phase of our method, allowing you to coach an agent using waypoint advice\n",
     "    - \"Demos\" lets you collect trajectories providing actions each timestep.\n",
     "2. Select a save name (any string describing this experiment).\n",
     "3. Collect demos below\n"
@@ -154,20 +164,27 @@
     "# Collection\n",
     "To collect data, run the block below. A window will open which lets you collect data.  \n",
     "\n",
-    "In our human exps, we found you can reach good performance on this env with about 30 mins of human collection time.\n",
+    "In our human exps, we found you can reach okay performance (> 50% success) on this env with about 30 mins of human collection time.\n",
     "\n",
     "## Task\n",
-    "The agent's task is to unlock a door by collecting a matching-colored key and using it on the corresponding door. (To speed up training time, we always spawn the agent in the same room as the locked door.)\n",
+    "\n",
+    "**BabyAI**:  The agent's task is to unlock a door by collecting a matching-colored key and using it on the corresponding door. (To speed up training time, we always spawn the agent in the same room as the locked door, and the key is always in the same spot.)\n",
+    "\n",
+    "**Ant**: The agent's task is to reach the pink target.\n",
     "\n",
     "### Using Advice\n",
     "\n",
-    "The agent you will be coaching has been pretrained to understand Waypoint advice. It has never seen this particular environment/task before, and has never had to unlock a door. Click on a square to tell the agent to head there and manipulate any item present. Use the scrollbar to advance.\n",
+    "Note: Collecting advice requires a mouse.\n",
     "\n",
-    "### Providing Demos\n",
+    "**BabyAI**: The agent you will be coaching has been pretrained to understand Waypoint advice. It has never seen this particular environment/task before, and has never had to unlock a door. Click on a square to tell the agent to head there and manipulate any item present. Use the scrollwheel to advance.\n",
+    "\n",
+    "**Ant**: The agent you will be coaching has been pretrained to understand Waypoint advice. It has never seen an environment this large before. Click on a point to tell the agent to head there. Use the scrollwheel to advance.\n",
+    "\n",
+    "### Providing Demos (BabyAI env only)\n",
     "Use the arrow keys to navigate, Page Up/Down to manipulate objects, and Space to open doors.\n",
     "\n",
     "## Using Pre-collected data\n",
-    "We include a buffer of data collected using 30 mins of human time using Advice. You can only load this data if you have CUDA enabled. If you choose this option, ignore the second cell below.\n"
+    "We include a buffer of data collected using 30 mins of human time using Advice. You can only load this data if you have CUDA enabled."
    ]
   },
   {
@@ -176,9 +193,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_type = 'BabyAI'  # Options are 'BabyAI', 'Ant'\n",
+    "env_type = 'Ant'  # Options are 'BabyAI', 'Ant'\n",
     "collect_type = 'Advice'  # Options are 'Advice', 'Demos', or 'Precollected'\n",
-    "save_path = 'babyai_10_v0'  # Any string"
+    "save_path = 'whatever2'  # Any string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "collector = HumanFeedback(env_type=env_type, collect_type=collect_type, \n",
+    "                          save_path=save_path, seed=124)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pickle as pkl\n",
+    "# import joblib\n",
+    "# with open('saved_models/babyai_offset_advice/latest.pkl', 'rb') as f:\n",
+    "#     q = joblib.load(f)"
    ]
   },
   {
@@ -189,8 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "collector = HumanFeedback(env_type=env_type, collect_type=collect_type, \n",
-    "                          save_path=save_path, seed=124)"
+    "# env.render('rgb')"
    ]
   },
   {
@@ -202,7 +251,7 @@
     "Here, we train an advice-free policy on the collected trajectories using the buffer of collected trajectories.\n",
     "\n",
     "\n",
-    "It will train for 20 itrs, but feel free to pause before then."
+    "It will train for 20 itrs, but feel free to pause it before then if you'd like to see thet trained model."
    ]
   },
   {
@@ -223,7 +272,7 @@
    "source": [
     "# Visualize\n",
     "\n",
-    "Play video saved during training. This agent does not receive advice."
+    "Play a video of the agent you trained. This agent was trained using the coached rollouts you provided.  This agent does **not** receive advice."
    ]
   },
   {
@@ -234,8 +283,14 @@
    },
    "outputs": [],
    "source": [
-    "html_str = display_trained_model(save_path)\n",
-    "HTML(html_str)"
+    "display_trained_model(save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the agent's success rate during training."
    ]
   },
   {
@@ -248,51 +303,11 @@
    "source": [
     "plot(save_path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def load_data(name, file_name='progress.csv'):\n",
-    "    csv_name = pathlib.Path.cwd().joinpath('teachable', 'logs', name, file_name)\n",
-    "    data = pd.read_csv(csv_name)\n",
-    "    data.columns = [c.strip() for c in data.columns]\n",
-    "    return data\n",
-    "\n",
-    "def plot(run_name, metric='success_rate', x_label='Itrs'):\n",
-    "    use_itrs = x_label in ['Itrs', 'Samples']\n",
-    "    data = load_data(run_name, file_name='results.csv')\n",
-    "    data.columns = ['policy_env','policy','env','success_rate','stoch_accuracy','itr','num_feedback','time','reward']\n",
-    "    y = data[metric].ewm(span=5).mean().to_numpy() \n",
-    "    if use_itrs:\n",
-    "        x = data['itr'].to_numpy()\n",
-    "    else:\n",
-    "        x = data['num_feedback'].to_numpy()\n",
-    "    plt.title(run_name)\n",
-    "    plt.plot(x, y)\n",
-    "    plt.ylabel('Success', fontsize=15)\n",
-    "    plt.xlabel(x_label, fontsize=15)\n",
-    "    plt.show()\n",
-    "    \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install seaborn"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.11"
   },
   "toc": {
    "base_numbering": 1,
